--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="section">
       <h2>Career Objective</h2>
-      <p>Ambitious and Enthusiastic Graduate Seeking a Challenging Entry-Level Position to Utilize Strong Analytical and Problem-Solving Skills in a Dynamic Team Environment.</p>
+      <p>Seeking an opportunity to apply my technical and analytical skills in a progressive environment that fosters professional growth and continuous learning.</p>
     </div>
 
     <div class="section">
@@ -46,26 +46,42 @@
     <div class="section">
       <h2>Professional Summary</h2>
       <ul>
-        <li>3+ years experience as a QA</li>
-        <li>5 months internship as DevOps Engineer (StarAgile)</li>
-        <li>Experienced with Docker, Kubernetes, CI/CD, AWS, scripting</li>
-        <li>Strong problem-solving and collaborative skills</li>
+        <li>1+ years of hands-on experience with AWS DevOps, leveraging Git, Docker, Kubernetes, and Jenkins to automate CI/CD pipelines, manage cloud-native deployments, and streamline software delivery.</li>
+        <li>Engineer at StarAgile, where I gained hands-on experience with DevOps tools and technologies to simplify software development and deployment.</li>
+        <li>3+ years of experience working As a QA(quality assurance). Leveraged Docker and Kubernetes for deployment tasks, including updating deployment files, managing image IDs, and collaborating with Kubernetes teams, all while focusing on QA and operational responsibilities</li>
+        <li>Good at using DevOps tools and technologies to simplify software development and deployment.</li>
+        <li>Familiar with cloud platforms like AWS, Azure, or GCP. Can set up and manage virtual servers and containers. </li>
+        <li> Experienced in creating automated pipelines for software testing and deployment, making the process faster and more reliable </li>
+        <li> Hands-on experience using tools for checking system health and analyzing logs in real time, ensuring everything runs smoothly. </li>
+        <li> Understands basic security practices to keep applications and systems safe. </li>
+        <li> Works well in a team, communicates effectively, and collaborates with others for better productivity. </li>
+        <li> Good at finding and fixing issues in complex systems to keep them running well </li>
+        <li> Can create clear, easy-to-understand documents about configurations and troubleshooting, helping the team work efficiently </li>
+        <li> Able to learn new technologies fast and keep up with the latest trends in DevOps. </li>
       </ul>
     </div>
 
     <div class="section">
       <h2>Work History</h2>
       <p><strong>DevOps Engineer</strong> – StarAgile (Oct 2024 – Feb 2025)</p>
+      <p><strong>Responsibilities:</strong></p>
       <ul>
-        <li>Automated tasks with Python, set up Jenkins pipelines</li>
-        <li>Used Docker & Kubernetes, Terraform & Ansible</li>
-        <li>Monitored systems with Prometheus & Grafana</li>
+        <li>Managed Docker containers and Kubernetes orchestration for optimized application scalability.</li>
+        <li>Set up Jenkins pipelines for CI/CD, ensuring seamless deployment processes.</li>
+        <li>Utilized Terraform for automating AWS infrastructure provisioning. • Configured Ansible for server configuration management and ensured quick recovery from system failures.</li>
+        <li>Implemented Prometheus and Grafana for monitoring, enhancing system performance and reliability.</li>
+        <li>Managed version control using Git and GitHub by creating and maintaining repositories, handling pull requests, resolving merge conflicts, and ensuring smooth code integration across multiple projects.</li> 
       </ul>
-      <p><strong>Operations Associate (DevOps & QA)</strong> – Concentrix Daksh Pvt (Sep 2020 – Jan 2024)</p>
+      <p><strong>Technical Support Specialist (DevOps and QA Focus)</strong> – Concentrix Daksh Pvt "Google Play Store Project" (Sep 2020 – Jan 2024)</p>
+      <p><strong>Responsibilities:</strong></p>
       <ul>
-        <li>Supported app developers, resolved API/content issues</li>
-        <li>Updated Kubernetes deployments</li>
-        <li>Created documentation and trained teams</li>
+        <li> Provided customer support and troubleshooting for app developers, ensuring policy compliance and smooth onboarding. </li>
+        <li> Assisted in the deployment process by updating Kubernetes deployment files with the latest Docker image IDs, ensuring smooth application rollouts. </li>
+        <li> Created and maintained a text file (e.g., image-ids.txt) containing multiple Docker image IDs for Kubernetes deployments, streamlining the deployment process. </li>
+        <li> Collaborated with Kubernetes teams to enable Kubernetes to read and use the image ID list for seamless deployment. </li>
+        <li> Collaborated with global teams to enhance operational efficiency, optimize workflows, and improve service delivery. </li>
+        <li> Developed and maintained technical documentation and training materials to support internal teams and ensure knowledge retention. </li>
+        <li> Excellent communication skills, both verbal and written. </li>
       </ul>
     </div>
 
@@ -73,19 +89,15 @@
       <h2>Projects</h2>
       <p><strong>FinanceMe – Banking App DevOps</strong></p>
       <ul>
-        <li>CI/CD with Jenkins, Docker, Kubernetes</li>
-        <li>Infra automation with Terraform & Ansible</li>
-        <li>Monitoring with Prometheus & Grafana</li>
+        <li>C Migrated monolith to microservices; implemented CI/CD with Jenkins, Docker, Kubernetes (80% faster deployment); automated AWS infra with Terraform & Ansible; enabled real-time monitoring using Prometheus & Grafana.</li>
       </ul>
       <p><strong>Medicure – Healthcare Microservices</strong></p>
       <ul>
-        <li>CI/CD, container orchestration on cloud</li>
-        <li>Infra provisioning & config automation</li>
+        <li> Automated CI/CD for microservices across AWS/Azure/GCP; used Kubernetes & Docker for HA; provisioned infra with Terraform; configured Ansible for automation; integrated Prometheus & Grafana for monitoring.</li>
       </ul>
       <p><strong>InsureMe – Insurance Application</strong></p>
       <ul>
-        <li>Microservices migration, CI/CD, testing</li>
-        <li>Cloud monitoring setup</li>
+        <li>Shifted to microservices architecture; built CI/CD pipeline (Jenkins, Docker, Kubernetes); used Terraform & Ansible for infra automation & testing; implemented Prometheus & Grafana for infra monitoring.</li>
       </ul>
     </div>
 
